# zoomy-core

./: pyproject.toml
misc/: misc.py
model/: basefunction.py  basemodel.py  boundary_conditions.py
transformation/: to_numpy.py  to_ufl.py
zoomy_core/: README.md  __init__.py
zoomy_core/decorators/: decorators.py
zoomy_core/fvm/: flux.py  nonconservative_flux.py  ode.py  solver_numpy.py  timestepping.py
zoomy_core/mesh/: mesh.py  mesh_extrude.py  mesh_util.py
zoomy_core/misc/: custom_types.py  interpolation.py  io.py  logger_config.py  misc.py
zoomy_core/model/: analysis.py  basemodel.py  initial_conditions.py  model.py
zoomy_core/model/models/: GN.py  advection.py  basisfunctions.py  basismatrices.py  coupled_constrained.py  poisson.py  shallow_moments.py  shallow_moments_sediment.py  shallow_moments_topo.py  shallow_moments_variants.py  shallow_water.py  shallow_water_topo.py  shear_shallow_flow.py  sme_turbulent.py  vam.py
zoomy_core/postprocessing/: plotting.py  postprocessing.py
zoomy_core/preprocessing/: openfoam_moments.py
zoomy_core/transformation/: helpers.py  to_amrex.py  to_c.py  to_jax.py  to_openfoam.py
