[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "zoomy_core"
version = "0.1.14"
description = "A simulation software for dimensionally-reduced free surface flows."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GNU" }
authors = [
  { name = "Ingo Steldermann", email = "steldermann@mbd.rwth-aachen.de" }
]
keywords = ["simulation", "shallow flow", "free surface flow", "shallow moments", "shallow water", "VAM"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
  "Framework :: Jupyter",
]

dependencies = [
  "attrs",
  "sympy>=1.14",
  "numpy",
  "scipy",
  "loguru",
  "h5py",
  "matplotlib",
  "meshio",
  "pytest",
]


[project.optional-dependencies]
gui = [
  "pyvista",
  "trame",
  "trame-vtk",
  "trame-vuetify",
  "panel",
]
coupling = [
  "precice",
]
testing = [
  "swashes",
  "pyswashes",
]
mesh = [
  "gmsh",
  "python-gmsh",
  "rasterio"
]
dev = [
  "watchfiles",
  "Cython",
  "pytest-html"
]

# Example: pip install zoomy_core[viz,io]
# Example: pip install zoomy_core[dev]

[project.urls]
Homepage = "https://github.com/mbd-rwth/Zoomy"
Documentation = "https://mbd-rwth.github.io/Zoomy"
Source = "https://github.com/mbd-rwth/Zoomy"
Issues = "https://github.com/mbd-rwth/Zoomy/issues"


[tool.setuptools.packages.find]
include = ["*"]


